# PL-SQL-IDE

./: .gitignore  README.md  package.json
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/src/: main.rs  oracle_db.rs
docs/: coding-guidelines.md  requirements.md  roadmap.md
frontend/: app.css  app.html  app.js  backend_communication.js  code-editor.css  code-editor.html  code-editor.js  db_data_viewer.css  db_data_viewer.js  db_data_viewer_test.html  index.html  main.js  object-tree-viewer.txt
frontend/data/: PLSQL-build-in-packages.csv  PLSQL-build-in-types.csv  plsql-build-in-packages.json  plsql-build-in-types.json  syntaxhighlighting-example-1.sql
live-server-dev/: Cargo.toml
live-server-dev/src/: main.rs
src/: dark-theme.css
